--- a/index.html
+++ b/index.html
@@ -1,1 +1,48 @@
-hello world
+Online HTML Editor
+powered by CKEditor
+
+Online HTML editor user guideReal-time collaboration editor user guide
+Online HTML Editor
+Real-time collaboration editor
+
+Switch to WYSIWYG editor
+1
+<p style="text-align:center"><strong><span style="font-size:12pt"><span style="font-family:&quot;Times New Roman&quot;,serif"><span style="font-family:&quot;Calibri&quot;,sans-serif">James Gaston Wynn</span></span></span></strong></p>
+2
+​
+3
+<p style="text-align:center"><span style="font-size:12pt"><span style="font-family:&quot;Times New Roman&quot;,serif"><span style="font-size:11.0pt"><span style="font-family:&quot;Calibri&quot;,sans-serif">(512) 698-9178</span></span></span></span></p>
+4
+​
+5
+<p style="text-align:center"><span style="font-size:12pt"><span style="font-family:&quot;Times New Roman&quot;,serif"><u><span style="font-size:11.0pt"><span style="font-family:&quot;Calibri&quot;,sans-serif"><span style="color:blue">wynn.james@gmail.com</span></span></span></u></span></span></p>
+6
+​
+7
+<p style="margin-right:6px"><span style="font-size:12pt"><span style="font-family:&quot;Times New Roman&quot;,serif"><span style="font-size:11.0pt"><span style="font-family:&quot;Calibri&quot;,sans-serif">I have over 25 years of experience as a Business Analyst and Technical Writer, creating user manuals, knowledgebase guides, administrator guides, API references, online help, animated online demos, business analysis to develop use cases, UML/BPM workflow diagrams and decks, and requirements documentation.</span></span></span></span></p>
+8
+​
+9
+<p style="margin-right:6px"><span style="font-size:12pt"><span style="font-family:&quot;Times New Roman&quot;,serif"><span style="font-size:11.0pt"><span style="font-family:&quot;Calibri&quot;,sans-serif">I have led teams of writers and served as a mentor to junior writers. </span></span></span></span></p>
+10
+​
+11
+<p style="margin-right:6px"><span style="font-size:12pt"><span style="font-family:&quot;Times New Roman&quot;,serif"><span style="font-size:11.0pt"><span style="font-family:&quot;Calibri&quot;,sans-serif">I am capable of operating as a peer of the development, QA, and management team members to solve documentation and process-related problems without hand-holding or constant direction. I can assess the necessary content for various communication channels, and also query code and databases for that content without assistance. </span></span></span></span></p>
+12
+​
+13
+<p style="margin-right:6px"><span style="font-size:12pt"><span style="font-family:&quot;Times New Roman&quot;,serif"><em><span style="font-size:11.0pt"><span style="font-family:&quot;Calibri&quot;,sans-serif">I am not a coder.</span></span></em><span style="font-size:11.0pt"><span style="font-family:&quot;Calibri&quot;,sans-serif"> I am at ease with querying the code and databases for configuration information. I have also assisted developers in self-documenting their code. At my current position alone I have had to switch from documenting Python to documenting Java. However, if routine scripting tasks and testing duties are required to perform my job, I am confident I will be able to accommodate to the requirements of my position.</span></span></span></span></p>
+14
+​
+15
+<p style="margin-right:6px"><span style="font-size:12pt"><span style="font-family:&quot;Times New Roman&quot;,serif"><span style="font-size:11.0pt"><span style="font-family:&quot;Calibri&quot;,sans-serif">Currently I am the Product Owner and Solution Architect for an FX trading exposure-mitigation tool in the Financial industry. </span></span></span></span></p>
+16
+​
+17
+<p style="margin-right:6px"><span style="font-size:12pt"><span style="font-family:&quot;Times New Roman&quot;,serif"><span style="font-size:11.0pt"><span style="font-family:&quot;Calibri&quot;,sans-serif">I started at State Street as the senior technical writer for the Automation &amp; AI group. Afterward, I became, initially, the Business Analyst, then Solution Architect and Product Owner of a new FX trading exposure-mitigation tool. In this role:</span></span></span></span></p>
+18
+​
+19
+<ul>
+20
+    <li><span style="font-size:12pt"><span style="font-family:&quot;Times New Roman&quot;,serif"><span style="font-size:11.0pt"><span style="font-family:&quot;Calibri&quot;,sans-serif">Wrote the narrative process descriptions, assigned development tasks and oversaw all Alpha testing. </span></span></span></span></li>
