--- a/index.html
+++ b/index.html
@@ -1,7 +1,16 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<meta charset="UTF-8">
+<title>Page Title</title>
+<meta name="viewport" content="width=device-width,initial-scale=1">
+<link rel="stylesheet" href="">
+<style>
+</style>
+<script src=""></script>
+<body>
 <p style="text-align:center"><strong><span style="font-size:12pt"><span style="font-family:&quot;Times New Roman&quot;,serif"><span style="font-family:&quot;Calibri&quot;,sans-serif">James Gaston Wynn</span></span></span></strong></p>
 <p style="text-align:center"><span style="font-size:12pt"><span style="font-family:&quot;Times New Roman&quot;,serif"><span style="font-size:11.0pt"><span style="font-family:&quot;Calibri&quot;,sans-serif">(512) 698-9178</span></span></span></span></p>
-<p style="text-align:center"><span style="font-size:12pt"><span style="font-family:&quot;Times New Roman&quot;,serif"><u><span style="font-size:11.0pt"><span style="font-family:&quot;Calibri&quot;,sans-serif"><span style="color:blue">wynn.james@gmail.com</span></span></span></u></span></span></p>
+<p style="text-align:center"><span style="font-size:12pt"><span style="font-family:&quot;Times New Roman&quot;,serif"><u><span style="font-size:11.0pt"><span style="font-family:&quot;Calibri&quot;,sans-serif"><span style="color:blue"><a href="mailto:wynn.james@gmail.com>wynn.james@gmail.com</a></span></span></span></u></span></span></p>
 <p style="margin-right:6px"><span style="font-size:12pt"><span style="font-family:&quot;Times New Roman&quot;,serif"><span style="font-size:11.0pt"><span style="font-family:&quot;Calibri&quot;,sans-serif">I have over 25 years of experience as a Business Analyst and Technical Writer, creating user manuals, knowledgebase guides, administrator guides, API references, online help, animated online demos, business analysis to develop use cases, UML/BPM workflow diagrams and decks, and requirements documentation.</span></span></span></span></p>
 <p style="margin-right:6px"><span style="font-size:12pt"><span style="font-family:&quot;Times New Roman&quot;,serif"><span style="font-size:11.0pt"><span style="font-family:&quot;Calibri&quot;,sans-serif">I have led teams of writers and served as a mentor to junior writers. </span></span></span></span></p>
 
@@ -56,3 +65,5 @@ In a mixed Agile-Waterfall environment, maintained SOAP API service documentatio
 <p style="margin-left:12px"><span style="font-size:12pt"><span style="font-family:&quot;Times New Roman&quot;,serif"><span style="font-size:11.0pt"><span style="font-family:&quot;Calibri&quot;,sans-serif">Lamar University, Beaumont, TX Bachelor of Arts in English Literature</span></span></span></span></p>
 
 <p>&nbsp;</p>
+</body>
+</html>
