--- a/index.html
+++ b/index.html
@@ -5,86 +5,99 @@
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <link rel="stylesheet" href="">
 <style>
+  h1 {text-align:center;font-size:12pt;weight:strong;font-family:Calibri}
+  h2 {margin-right:12px;font-size:12pt;weight:strong;font-family:Calibri}
+  a {text-decoration-line: underline; color:blue}
+
+  p {margin-right:12px;font-size:11pt;font-family:Calibri}
+  li {margin-right:18px;font-size:11pt;font-family:Calibri}
+</style>
 </style>
 <script src=""></script>
 <body>
-<p style="text-align:center"><strong><span style="font-size:12pt">
-    <span style="font-family:&quot;Calibri&quot;,sans-serif">James Gaston Wynn</span></span></span></strong></p>
-<p style="text-align:center"><span style="font-size:12pt">
-    <span style="font-size:11.0pt"><span style="font-family:&quot;Calibri&quot;,sans-serif">(512) 698-9178</span></span></span></span></p>
-<p style="text-align:center"><span style="font-size:12pt">
-    <u><span style="font-size:11.0pt"><span style="font-family:&quot;Calibri&quot;,sans-serif"><span style="color:blue">
-        <a href="mailto:wynn.james@gmail.com">wynn.james@gmail.com</a></span></span></span></u></span></span></p>
-<p style="margin-right:12px"><span style="font-size:12pt">
-    <span style="font-size:11.0pt"><span style="font-family:&quot;Calibri&quot;,sans-serif">I have over 25 years of experience as a Business Analyst and Technical Writer, creating user manuals, knowledgebase guides, administrator guides, API references, online help, animated online demos, business analysis to develop use cases, UML/BPM workflow diagrams and decks, and requirements documentation.</span></span></span></span></p>
-<p style="margin-right:12px"><span style="font-size:12pt">
-    <span style="font-size:11.0pt"><span style="font-family:&quot;Calibri&quot;,sans-serif">I have led teams of writers and served as a mentor to junior writers. </span></span></span></span></p>
+<h1>James Gaston Wynn</h1>
+<h1>(512) 698-9178</h1>
+<h1><a href="mailto:wynn.james@gmail.com">wynn.james@gmail.com</a></h1>
+<p>I have over 25 years of experience as a Business Analyst and Technical Writer, creating user manuals, knowledgebase guides, 
+    administrator guides, API references, online help, animated online demos, business analysis to develop use cases, 
+    UML/BPM workflow diagrams and decks, and requirements documentation.</p>
+<p>I have led teams of writers and served as a mentor to junior writers.</p>
 
-<p style="margin-right:12px"><span style="font-size:12pt">
-    <span style="font-size:11.0pt"><span style="font-family:&quot;Calibri&quot;,sans-serif">I am capable of operating as a peer of the development, QA, and management team members to solve documentation and process-related problems without hand-holding or constant direction. I can assess the necessary content for various communication channels, and also query code and databases for that content without assistance. </span></span></span></span></p>
+<p>I am capable of operating as a peer of the development, QA, and management team members to solve documentation and process-related problems 
+    without hand-holding or constant direction. I can assess the necessary content for various communication channels, and also query code and 
+    databases for that content without assistance.</p>
 
-<p style="margin-right:12px"><span style="font-size:12pt">
-    <em><span style="font-size:11.0pt"><span style="font-family:&quot;Calibri&quot;,sans-serif">I am not a coder.</span></em>
-    <span style="font-size:11.0pt"><span style="font-family:&quot;Calibri&quot;,sans-serif"> I am at ease with querying the code and databases for configuration information. I have also assisted developers in self-documenting their code. At my current position alone I have had to switch from documenting Python to documenting Java. However, if routine scripting tasks and testing duties are required to perform my job, I am confident I will be able to accommodate to the requirements of my position.</span></span></span></span></p>
+<p><em>I am not a coder.</em> I am at ease with querying the code and databases for configuration information. 
+    I have also assisted developers in self-documenting their code. At my current position alone I have had 
+    to switch from documenting Python to documenting Java. However, if routine scripting tasks and testing duties 
+    are required to perform my job, I am confident I will be able to accommodate to the requirements of my position.</p>
 
-<p style="margin-right:12px"><span style="font-size:12pt">
-    <span style="font-size:11.0pt"><span style="font-family:&quot;Calibri&quot;,sans-serif">Currently I am the Product Owner and Solution Architect for an FX trading exposure-mitigation tool in the Financial industry. </span></span></span></span></p>
+<p>Currently I am the Product Owner and Solution Architect for an FX trading exposure-mitigation tool in the Financial industry. </p>
 
-<p style="margin-right:12px"><span style="font-size:12pt">
-    <span style="font-size:11.0pt"><span style="font-family:&quot;Calibri&quot;,sans-serif">I started at State Street as the senior technical writer for the Automation &amp; 
-        AI group. Afterward, I became, initially, the Business Analyst, then Solution Architect and Product Owner of a new FX trading exposure-mitigation tool. In this role:
-    </span></span></span></span></p>
+<p>I started at State Street as the senior technical writer for the Automation &amp; AI group. Afterward, I became, initially, 
+    the Business Analyst, then Solution Architect and Product Owner of a new FX trading exposure-mitigation tool. In this role:</p>
 
 <ul>
-	<li><span style="font-size:12pt"><span style="font-size:11.0pt">
-        <span style="font-family:&quot;Calibri&quot;,sans-serif">Wrote the narrative process descriptions, assigned development tasks and oversaw all Alpha testing. </span></span></span></span></li>
-	<li><span style="font-size:12pt"><span style="font-size:11.0pt">
-        <span style="font-family:&quot;Calibri&quot;,sans-serif">Developed original documentation, SQL reports, presentation decks and regular updates to management. </span></span></span></span></li>
-	<li><span style="font-size:12pt">
-        <span style="font-family:&quot;Calibri&quot;,sans-serif">Provided product support to users.</span></span></span></span></li>
+	<li>Wrote the narrative process descriptions, assigned development tasks and oversaw all Alpha testing.</li>
+	<li>Developed original documentation, SQL reports, presentation decks and regular updates to management.</li>
+	<li>Provided product support to users.</li>
 </ul>
 
-<h1 style="margin-left:12px"><span style="font-size:24pt">
-    <strong><span style="font-size:11.0pt"><span style="font-family:&quot;Calibri&quot;,sans-serif">Applicable Skills</span></span></strong></span></span></h1>
+<h2>Applicable Skills</h2>
 
-<p style="margin-left:12px"><span style="font-size:12pt">
-    <span style="font-size:10.0pt"><span style="font-family:&quot;Calibri&quot;,sans-serif">Skill (yrs of exp): Technical Writing (25+), Business Analysis (12+), Word (20+), Acrobat (10+), &nbsp;SQL queries (10+), Excel (16), Powerpoint (16), UNIX (10+), Markdown (5+), Git (5+), Version control tools (14+), JIRA&nbsp; (9), Confluence&nbsp; (9),&nbsp; Madcap Flare (7), FrameMaker (10+), RoboHelp (10+), Captivate (5), HTML (20), XML (15), SharePoint (4), Graphics creation (15+)</span></span></span></span></p>
+<p>Skill (yrs of exp): Technical Writing (25+), Business Analysis (12+), Word (20+), Acrobat (10+), &nbsp;SQL queries (10+), 
+    Excel (16), Powerpoint (16), UNIX (10+), Markdown (5+), Git (5+), Version control tools (14+), JIRA&nbsp; (9), 
+    Confluence&nbsp; (9),&nbsp; Madcap Flare (7), FrameMaker (10+), RoboHelp (10+), Captivate (5), HTML (20), XML (15), 
+    SharePoint (4), Graphics creation (15+)</p>
 
-<h1 style="margin-left:12px"><span style="font-size:24pt">
-    <strong><span style="font-size:12.0pt"><span style="font-family:&quot;Calibri&quot;,sans-serif">Complete Experience</span></span></strong></span></span></h1>
+<h2>Complete Experience</h2>
 
-<p style="margin-left:12px"><span style="font-size:12pt">
-    <span style="font-size:11.0pt"><span style="font-family:&quot;Calibri&quot;,sans-serif">LinkedIn: </span></span><a href="https://www.linkedin.com/in/james-wynn-a24b352/" style="color:blue; text-decoration:underline"><span style="font-size:11.0pt"><span style="font-family:&quot;Calibri&quot;,sans-serif">https://www.linkedin.com/in/james-wynn-a24b352/</span></span></a></span></span></p>
+<p>LinkedIn:&nbsp;<a href="https://www.linkedin.com/in/james-wynn-a24b352/">https://www.linkedin.com/in/james-wynn-a24b352/</p>
 
-<h1 style="margin-left:12px"><span style="font-size:24pt">
-    <strong><span style="font-size:12.0pt"><span style="font-family:&quot;Calibri&quot;,sans-serif">Applicable Experience</span></span></strong></span></span></h1>
+<h2>Applicable Experience</h2>
 
-<h2><u><span style="font-size:11.0pt">
-    <span style="font-family:&quot;Calibri&quot;,sans-serif">State Street</span></span></u><span style="font-size:11.0pt"><span style="font-family:&quot;Calibri&quot;,sans-serif"> &ndash; <strong>Technical Writer</strong> &ndash; Austin, TX (November 2018 &ndash; Present)</span></span></span></span></h2>
+<p><strong><u>State Street</strong></u> &ndash; <strong>Technical Writer</strong> &ndash; Austin, TX (November 2018 &ndash; Present)</p>
 
-<p style="margin-left:12px"><span style="font-size:11.0pt"><span style="font-family:&quot;Calibri&quot;,sans-serif">For the FX Marry application project served as Product Owner, Business Analyst, and Solution Designer giving specific operations and process instructions to the development teams in India and China. Wrote comps, operations, and system architecture documentation for the UI and underlying processes/databases. Served as sole documentation expert for the Automation &amp; AI team, in maintaining user guides and code self-documentation. </span></span></span></span></p>
+<p>For the FX Marry application project served as Product Owner, Business Analyst, and Solution Designer giving specific operations and process 
+    instructions to the development teams in India and China. Wrote comps, operations, and system architecture documentation for the UI and 
+    underlying processes/databases. Served as sole documentation expert for the Automation &amp; AI team, in maintaining user guides and code self-documentation.</p>
 
-<h2><u><span style="font-size:11.0pt"><span style="font-family:&quot;Calibri&quot;,sans-serif">Sabre</span></span></u><span style="font-size:11.0pt"><span style="font-family:&quot;Calibri&quot;,sans-serif"> &ndash; <strong>Senior Technical Writer</strong> &ndash; Southlake, TX (May 2017 &ndash; May 2018)</span></span></span></span></h2>
+    <p><strong><u>Sabre</strong></u> &ndash; <strong>Senior Technical Writer</strong> &ndash; Southlake, TX (May 2017 &ndash; May 2018)</p>
 
-<p style="margin-left:12px"><span style="font-size:11.0pt"><span style="font-family:&quot;Calibri&quot;,sans-serif">Sabre Hospitality Solutions Integration provides a SaaS platform for distribution, operations and marketing solutions to the hotel industry.<br />
-In a mixed Agile-Waterfall environment, maintained SOAP API service documentation for three local development teams and a remote team in Krakow, Poland. Maintained legacy documentation in SharePoint. Oversaw the conversion of the 1000s of pages of the documentation library from MS Word to Madcap Flare for output to PDF and dynamic HTML. Created a framework for maintaining the documentation across the team of writers in a revision repository. Trained the writers team to edit and maintain documentation in Flare. </span></span></span></span></p>
+<p>Sabre Hospitality Solutions Integration provides a SaaS platform for distribution, operations and marketing solutions to the hotel industry.</p>
 
-<h2><span style="font-size:18pt"><u><span style="font-size:11.0pt"><span style="font-family:&quot;Calibri&quot;,sans-serif">Mozido</span></span></u><span style="font-size:11.0pt"><span style="font-family:&quot;Calibri&quot;,sans-serif"> &ndash; <strong>Lead Technical Writer/Agile Product Owner of Documentation</strong> &ndash; Austin, TX<br />
-(Dec 2014 &ndash; Apr 2016)</span></span></span></span></h2>
+<p>In a mixed Agile-Waterfall environment, maintained SOAP API service documentation for three local development teams and a remote team in Krakow, Poland. 
+Maintained legacy documentation in SharePoint. Oversaw the conversion of the 1000s of pages of the documentation library from MS Word to Madcap Flare for 
+output to PDF and dynamic HTML. Created a framework for maintaining the documentation across the team of writers in a revision repository. 
+Trained the writers team to edit and maintain documentation in Flare.</p>
 
-<p style="margin-left:12px"><span style="font-size:11.0pt"><span style="font-family:&quot;Calibri&quot;,sans-serif">Mozido maintained a secure J2EE SaaS API platform (SOAP and REST) in the same market as Venmo and Paypal.</span></span></span></span></p>
+<p><strong><u>Mozido</strong></u> &ndash; <strong>Lead Technical Writer/Agile Product Owner of Documentation</strong> &ndash; Austin, TX<br />
+(Dec 2014 &ndash; Apr 2016)</p>
 
-<p style="margin-left:12px"><span style="font-size:11.0pt"><span style="font-family:&quot;Calibri&quot;,sans-serif">As the Agile Product Owner of Documentation, supervised and led a documentation team using Microsoft Word, Confluence and JIRA, and Madcap Flare to develop SOAP and REST API reference documentation (XML and JSON commands), and SDK-related documentation for dynamic HTML, RAML, and PDF. Reviewed the Java code-base in Git and the database in Bamboo to assist creating documentation content. Redesigned the product documentation. Participated in overhauling project processes for increased efficiency and productivity. Reorganized team priorities to clear a major documentation backlog. Used Confluence and JIRA to manage team communication. Assisted in development of proposals on short time-lines. Developed process documentation for Delivery development teams. Helped design a Git-to-Webserver system to host and maintain HTML5 documentation in Confluence and for external users. Used Git Bash and SourceTree to manage Git repositories. Used Eclipse to review code base. Built Kanban board with swimlanes in JIRA and wrote epics and user stories to manage writer activity. Acted as a resource for other writers. </span></span></span></span></p>
+<p>Mozido maintained a secure J2EE SaaS API platform (SOAP and REST) in the same market as Venmo and Paypal.</p>
 
-<h2><u><span style="font-size:11.0pt"><span style="font-family:&quot;Calibri&quot;,sans-serif">Icontrol Networks</span></span></u><span style="font-size:11.0pt"><span style="font-family:&quot;Calibri&quot;,sans-serif"> &ndash; <strong>Lead Technical Writer</strong> &ndash; Austin, TX (Mar 2009 &ndash; Dec 2014)</span></span></span></span></h2>
+<p>As the Agile Product Owner of Documentation, supervised and led a documentation team using Microsoft Word, Confluence and JIRA, and Madcap Flare 
+    to develop SOAP and REST API reference documentation (XML and JSON commands), and SDK-related documentation for dynamic HTML, RAML, and PDF. 
+    Reviewed the Java code-base in Git and the database in Bamboo to assist creating documentation content. Redesigned the product documentation. 
+    Participated in overhauling project processes for increased efficiency and productivity. Reorganized team priorities to clear a major documentation backlog. 
+    Used Confluence and JIRA to manage team communication. Assisted in development of proposals on short time-lines. 
+    Developed process documentation for Delivery development teams. Helped design a Git-to-Webserver system to host and maintain HTML5 documentation 
+    in Confluence and for external users. Used Git Bash and SourceTree to manage Git repositories. Used Eclipse to review code base. 
+    Built Kanban board with swimlanes in JIRA and wrote epics and user stories to manage writer activity. Acted as a resource for other writers.</p>
 
-<p style="margin-left:12px"><span style="font-size:11.0pt"><span style="font-family:&quot;Calibri&quot;,sans-serif">The Icontrol system is the backbone of Comcast&rsquo;s smart home platform. </span></span></span></span></p>
+    <p><strong><u>Icontrol Networks</strong></u> &ndash; <strong>Lead Technical Writer</strong> &ndash; Austin, TX (Mar 2009 &ndash; Dec 2014)</p>
 
-<p style="margin-left:12px"><span style="font-size:11.0pt"><span style="font-family:&quot;Calibri&quot;,sans-serif">In an Agile environment, supervised and led a documentation team performing technical writing and business analysis using Microsoft Word and Madcap Flare (Windows PCs) to develop system architecture documents, network architecture documents, REST API reference, SDK-related documentation, and user guides, hardware installation guides, server installation guides, server operations manuals, a database dictionary, and user documentation. Used Visio for business process modeling. Used Confluence to manage development architecture documentation. &nbsp;Used Photoshop, Illustrator, and Visio to create technical illustrations. Developed documentation in Word, PDF, and HTML5 format. Used SVN for version control.</span></span></span></span></p>
+<p>The Icontrol system is the backbone of Comcast&rsquo;s smart home platform.</p>
 
-<h1 style="margin-left:12px"><strong><span style="font-size:11.0pt"><span style="font-family:&quot;Calibri&quot;,sans-serif">Education</span></span></strong></span></span></h1>
+<p>In an Agile environment, supervised and led a documentation team performing technical writing and business analysis using Microsoft Word and 
+    Madcap Flare (Windows PCs) to develop system architecture documents, network architecture documents, REST API reference, SDK-related documentation, 
+    and user guides, hardware installation guides, server installation guides, server operations manuals, a database dictionary, and user documentation. 
+    Used Visio for business process modeling. Used Confluence to manage development architecture documentation. &nbsp;Used Photoshop, Illustrator, 
+    and Visio to create technical illustrations. Developed documentation in Word, PDF, and HTML5 format. Used SVN for version control.</p>
 
-<p style="margin-left:12px"><<span style="font-size:11.0pt"><span style="font-family:&quot;Calibri&quot;,sans-serif">Lamar University, Beaumont, TX Bachelor of Arts in English Literature</span></span></span></span></p>
+<h2>Education</h2>
+
+<p>Lamar University, Beaumont, TX Bachelor of Arts in English Literature</p>
 
 <p>&nbsp;</p>
 </body>
