--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
 <h2>Complete Experience</h2>
 
-<p>LinkedIn:&nbsp;<a href="https://www.linkedin.com/in/james-wynn-a24b352/">https://www.linkedin.com/in/james-wynn-a24b352/</p>
+<p>LinkedIn:&nbsp;<a href="https://www.linkedin.com/in/james-wynn-a24b352/">https://www.linkedin.com/in/james-wynn-a24b352/</a></p>
 
 <h2>Applicable Experience</h2>
 
