--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
 <link rel="stylesheet" href="">
 <style>
   h1 {text-align:center;font-size:12pt;weight:strong;font-family:Calibri}
-  h2 {margin-right:24px;font-size:12pt;weight:strong;font-family:Calibri}
+  h2 {margin-left:24px;font-size:12pt;weight:strong;font-family:Calibri}
   a {text-decoration-line: underline; color:blue}
 
-  p {margin-right:24px;font-size:11pt;font-family:Calibri}
-  li {margin-right:36px;font-size:11pt;font-family:Calibri}
+  p {margin-left:24px; margin-right:24px;font-size:11pt;font-family:Calibri}
+  li {margin-left:36px;font-size:11pt;font-family:Calibri}
 </style>
 </style>
 <script src=""></script>
