--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <link rel="stylesheet" href="">
 <style>
-  h1 {text-align:center;font-size:12pt;weight:strong;font-family:Calibri}
+  h1 {text-align:center;font-size:12pt;font-family:Calibri}
   h2 {margin-left:24px;font-size:12pt;weight:strong;font-family:Calibri}
   a {text-decoration-line: underline; color:blue}
 
@@ -15,7 +15,7 @@
 </style>
 <script src=""></script>
 <body>
-<h1>James Gaston Wynn</h1>
+<h1><strong>James Gaston Wynn</strong></h1>
 <h1>(512) 698-9178</h1>
 <h1><a href="mailto:wynn.james@gmail.com">wynn.james@gmail.com</a></h1>
 <p>I have over 25 years of experience as a Business Analyst and Technical Writer, creating user manuals, knowledgebase guides, 
