--- a/index.html
+++ b/index.html
@@ -10,13 +10,14 @@
   a {text-decoration-line: underline; color:blue}
 
   p {margin-left:24px; margin-right:24px;font-size:11pt;font-family:Calibri}
+  p2 {text-align:center;font-size:12pt;font-family:Calibri}
   li {margin-left:36px;font-size:11pt;font-family:Calibri}
 </style>
 </style>
 <script src=""></script>
 <body>
-<h1><strong>James Gaston Wynn</strong></h1>
-<h1>(512) 698-9178</h1>
+<p2><strong>James Gaston Wynn</strong></p2>
+<p2>(512) 698-9178</p2>
 <h1><a href="mailto:wynn.james@gmail.com">wynn.james@gmail.com</a></h1>
 <p>I have over 25 years of experience as a Business Analyst and Technical Writer, creating user manuals, knowledgebase guides, 
     administrator guides, API references, online help, animated online demos, business analysis to develop use cases, 
