--- a/index.html
+++ b/index.html
@@ -5,19 +5,18 @@
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <link rel="stylesheet" href="">
 <style>
-  h1 {text-align:center;font-size:12pt;font-family:Calibri}
+  p.center {text-align:center;font-size:12pt;font-family:Calibri}
   h2 {margin-left:24px;font-size:12pt;weight:strong;font-family:Calibri}
   a {text-decoration-line: underline; color:blue}
 
   p {margin-left:24px; margin-right:24px;font-size:11pt;font-family:Calibri}
-  p2 {text-align:center;font-size:12pt;font-family:Calibri}
+   {text-align:center;font-size:12pt;font-family:Calibri}
   li {margin-left:36px;font-size:11pt;font-family:Calibri}
-</style>
 </style>
 <script src=""></script>
 <body>
-<p2><strong>James Gaston Wynn</strong></p2>
-<p2>(512) 698-9178</p2>
+<p.center>James Gaston Wynn</p.center>
+<p.center>(512) 698-9178</p.center>
 <h1><a href="mailto:wynn.james@gmail.com">wynn.james@gmail.com</a></h1>
 <p>I have over 25 years of experience as a Business Analyst and Technical Writer, creating user manuals, knowledgebase guides, 
     administrator guides, API references, online help, animated online demos, business analysis to develop use cases, 
