--- a/index.html
+++ b/index.html
@@ -5,19 +5,17 @@
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <link rel="stylesheet" href="">
 <style>
-  p.center {text-align:center;font-size:12pt;font-family:Calibri}
+  p.a {text-align: center;font-size:12pt;font-family:Calibri}
   h2 {margin-left:24px;font-size:12pt;weight:strong;font-family:Calibri}
   a {text-decoration-line: underline; color:blue}
-
   p {margin-left:24px; margin-right:24px;font-size:11pt;font-family:Calibri}
-   {text-align:center;font-size:12pt;font-family:Calibri}
   li {margin-left:36px;font-size:11pt;font-family:Calibri}
 </style>
 <script src=""></script>
 <body>
-<p.center>James Gaston Wynn</p.center>
-<p.center>(512) 698-9178</p.center>
-<h1><a href="mailto:wynn.james@gmail.com">wynn.james@gmail.com</a></h1>
+<p.a>James Gaston Wynn</p.a>
+<p.a>(512) 698-9178</p.a>
+<p.a><a href="mailto:wynn.james@gmail.com">wynn.james@gmail.com</a></p.a>
 <p>I have over 25 years of experience as a Business Analyst and Technical Writer, creating user manuals, knowledgebase guides, 
     administrator guides, API references, online help, animated online demos, business analysis to develop use cases, 
     UML/BPM workflow diagrams and decks, and requirements documentation.</p>
