--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <link rel="stylesheet" href="">
 <style>
-  p.a {text-align: center;font-size:12pt;font-family:Calibri}
+  div.a {text-align: center;font-size:12pt;font-family:Calibri}
   h2 {margin-left:24px;font-size:12pt;weight:strong;font-family:Calibri}
   a {text-decoration-line: underline; color:blue}
   p {margin-left:24px; margin-right:24px;font-size:11pt;font-family:Calibri}
@@ -13,9 +13,9 @@
 </style>
 <script src=""></script>
 <body>
-<p.a>James Gaston Wynn</p.a>
-<p.a>(512) 698-9178</p.a>
-<p.a><a href="mailto:wynn.james@gmail.com">wynn.james@gmail.com</a></p.a>
+<p><div.a>James Gaston Wynn</div.a></p>
+<p><div.a>(512) 698-9178</div.a></p>
+<p><div.a><a href="mailto:wynn.james@gmail.com">wynn.james@gmail.com</a></div.a></p>
 <p>I have over 25 years of experience as a Business Analyst and Technical Writer, creating user manuals, knowledgebase guides, 
     administrator guides, API references, online help, animated online demos, business analysis to develop use cases, 
     UML/BPM workflow diagrams and decks, and requirements documentation.</p>
