--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
     Confluence&nbsp; (9),&nbsp; Madcap Flare (7), FrameMaker (10+), RoboHelp (10+), Captivate (5), HTML (20), XML (15), 
     SharePoint (4), Graphics creation (15+)</p>
 
-<h2>Complete Experience</h2>
+<h2>Complete Work History</h2>
 
 <p>LinkedIn:&nbsp;<a href="https://www.linkedin.com/in/james-wynn-a24b352/">https://www.linkedin.com/in/james-wynn-a24b352/</a></p>
 
-<h2>Applicable Experience</h2>
+<h2>Recent Experience</h2>
 
 <p><strong><u>State Street</strong></u> &ndash; <strong>Technical Writer</strong> &ndash; Austin, TX (November 2018 &ndash; Present)</p>
 
@@ -83,7 +83,7 @@ Trained the writers team to edit and maintain documentation in Flare.</p>
     in Confluence and for external users. Used Git Bash and SourceTree to manage Git repositories. Used Eclipse to review code base. 
     Built Kanban board with swimlanes in JIRA and wrote epics and user stories to manage writer activity. Acted as a resource for other writers.</p>
 
-    <p><strong><u>Icontrol Networks</strong></u> &ndash; <strong>Lead Technical Writer</strong> &ndash; Austin, TX (Mar 2009 &ndash; Dec 2014)</p>
+<p><strong><u>Icontrol Networks</strong></u> &ndash; <strong>Lead Technical Writer</strong> &ndash; Austin, TX (Mar 2009 &ndash; Dec 2014)</p>
 
 <p>The Icontrol system is the backbone of Comcast&rsquo;s smart home platform.</p>
 
