--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 <p><em>I am not a coder.</em> I am at ease with querying the code and databases for configuration information. 
     I have also assisted developers in self-documenting their code. At my current position alone I have had 
-    to switch from documenting Python to documenting Java. However, if routine scripting tasks and testing duties 
+    to switch from documenting Python to documenting Java. If routine scripting tasks and testing duties 
     are required to perform my job, I am confident I will be able to accommodate to the requirements of my position.</p>
 
 <p>Currently I am the Product Owner and Solution Architect for an FX trading exposure-mitigation tool in the Financial industry. </p>
